Fix image not showing up in firefox
The flex property in image type was not allowing the images to show up in firefox. it was due to the flex-basis being set to zero. Fixed it by setting flex basis to auto

--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ img {
   max-width: 90%;
   max-height:96%;
   border: 1px solid crimson;
-  flex: 1 1 0;
+  flex: 1 1 auto;
 }
 
 .text {
